<package format="2">
	<name>attention_signal</name>
	<version>0.0.0</version>
	<description>The Attention Signal package</description>

	<maintainer email="slopes@todo.todo">slopes</maintainer>

	<license>TODO</license>

	<buildtool_depend>catkin</buildtool_depend>
  
	<build_depend>message_generation</build_depend>
	<build_export_depend>message_runtime</build_export_depend>
	<exec_depend>message_runtime</exec_depend>

	<depend>std_msgs</depend>
	<depend>geometry_msgs</depend>
	
</package>
